--- a/Intro_OpenCL.ipynb
+++ b/Intro_OpenCL.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:0db20a4a52e006f4ceb568d18ea2b0301d9076cb205a397a89e082f2bdd3a12f"
+  "signature": "sha256:e0e40d68aaf702423ffb598f6d9912cc28d5e719b4302ede0443328b1957a6b3"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -18,8 +18,8 @@
       "This introduction is based on following article: <br>\n",
       "http://www.drdobbs.com/parallel/a-gentle-introduction-to-opencl/231002854\n",
       "\n",
-      "In this introduction, we use a game analogy.\n",
-      "\n"
+      "In this introduction, we use a game analogy.<br>\n",
+      "![Card Game v.s OpenCL](https://raw.github.com/dboyliao/PyOpenCL_learn/master/fig/Scarpino1.png)\n"
      ]
     },
     {
